<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pebble Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Pebble Navigation</string>
    <string name="how_to_use">Please use the buttons at the botton to request the 3 required permissions, selecting "allow all the time" for the location permission.
\n\n
For C:Geo: When you want to navigate to geocache, simply select that geocache, click Navigate and select Pebble!
\n\n
For the official Geocaching app: Select Radar and pick Pebble Navigator
\n\n
To close Pebble Navigation, click on the notification.
\n\n
You must have the application installed on your Pebble as well.</string>
    

    <string name="service_started">Click here to stop geocaching!</string>

    <string name="preference_file_key">sharedPrefsPebbleNav</string>
    

    <string name="navigation_has_started">Pebble Navigation has started!</string>
    
    <string name="error_message">Error: Something went wrong!</string>

    <string-array name="Units">
        <item>Imperial</item>
        <item>Metric</item>
        <item>Mixed</item>
    </string-array>

    <string name="metric_text">Metric</string>
    <string name="imperial_text">Imperial</string>
    <string name="mixed_text">Mixed</string>

</resources>
