<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/how_to_use"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Unit:" />

        <RadioGroup
            android:id="@+id/unitGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/metricBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metric_text"
                app:useMaterialThemeColors="true" />

            <RadioButton
                android:id="@+id/imperialBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imperial_text"
                app:useMaterialThemeColors="true" />

            <RadioButton
                android:id="@+id/mixedBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mixed_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Permissions:" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/locationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Location" />

            <Button
                android:id="@+id/locationBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Location 2" />

            <Button
                android:id="@+id/notificationsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notifications" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
